# AFQ-Insight

./: .buildinfo  .codespellrc  .pre-commit-config.yaml  CHANGES.rst  CONTRIBUTING.md  README.md  RELEASE.rst  _version.py  api.html  contributing.html  genindex.html  getting_help.html  index.html  install.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  user_guide.html
.github/: CONTRIBUTING.md
.github/workflows/: docbuild.yml  publish-to-test-pypi.yml  test.yml
.maintenance/: update_changes.sh  update_zenodo.py
_downloads/1515fb8d41d5867af5fb33aeccec07c7/: plot_als_classification.ipynb
_downloads/4089326b1079478b20ded0a482f170dd/: plot_hbn_site_profiles.py
_downloads/59b2ef974e8631cfc6f5cd750f2eebbd/: plot_hbn_site_profiles.ipynb
_downloads/6a6315e3014f9f8f9bcdf1902816b205/: plot_als_classification.py
_downloads/6c0234fab29c2b3dc2b87ddc4fbcc42d/: plot_age_regression.ipynb
_downloads/85ca7ddf2812ce2eb4eb341a2045be18/: plot_age_regression.py
_downloads/88f5a0bc7b07929bd000246bfdd1402a/: demo_afq_dataset.ipynb
_downloads/a454a80b7d0d9633e80b0ed70145f284/: plot_als_comparison.py
_downloads/bd472e1fe79e278546dec9725a76cd91/: plot_als_comparison.ipynb
_modules/: index.html
_modules/afqinsight/: cross_validate.html  datasets.html  pipeline.html  transform.html
_sources/: contributing.rst.txt  getting_help.rst.txt  install.rst.txt  sg_execution_times.rst.txt  user_guide.rst.txt
_sources/auto_examples/: demo_afq_dataset.rst.txt  index.rst.txt  plot_age_regression.rst.txt  plot_als_classification.rst.txt  plot_als_comparison.rst.txt  plot_hbn_site_profiles.rst.txt  sg_execution_times.rst.txt
afqinsight/: __init__.py  _serial_bagging.py  cross_validate.py  datasets.py  h5io.py  match.py  parametric.py  pipeline.py  plot.py  transform.py
afqinsight/augmentation/: augmentation.py  dtw.py
afqinsight/neurocombat_sklearn/: __init__.py  neurocombat.py  neurocombat_sklearn.py
afqinsight/neurocombat_sklearn/tests/: test_common.py  test_neurocombat.py
afqinsight/nn/: autoencoder_experiment_utils.py  compare_layers.py  performance_utils.py  pt_model_training.ipynb  pt_models.py  test_nn.py  tf_model_training.py  tf_models.py  utils.py
afqinsight/nn/tests/: autoencoder_experiments.py  temp.py  test_autoencoders.py  test_compare_py_tf.py  test_performance_py_tf.py  test_pt_models.py  test_tf_models.py  vae.py
afqinsight/tests/: test_augmentation.py  test_bagging.py  test_cross_validate.py  test_datasets.py  test_h5io.py  test_match.py  test_nn.py  test_parametric.py  test_pipelines.py  test_transform.py
auto_examples/: demo_afq_dataset.html  index.html  plot_age_regression.html  plot_als_classification.html  plot_als_comparison.html  plot_hbn_site_profiles.html  sg_execution_times.html
docs/: conf.py  index.rst  install.rst
docs/_templates/: numpydoc_docstring.py
examples/: demo_afq_dataset.py  plot_als_classification.py  plot_als_comparison.py  plot_hbn_site_profiles.py
neurocombat_sklearn/neurocombat_sklearn/tests/: test_common.py
