[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "C",
  "W",
  "B",
  "I",
]
ignore = [
  "B905",
  "C901",
  "E203",
  "F821"
]

[tool.ruff.lint.per-file-ignores]
"docs/_templates/numpydoc_docstring.py" = ["F821", "B018"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"