[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules

[metadata]
name = afqinsight
url = https://tractometry.org/AFQ-Insight
download_url = https://github.com/tractometry/AFQ-Insight
author = Adam Richie-Halford
author_email = richiehalford@gmail.com
maintainer = Ariel Rokem
maintainer_email = arokem@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = AFQ-Insight: Statistical Learning for Tractometry
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent
version = attr: my_package.__version__

[options]
setup_requires =
    setuptools_scm
    setuptools>=42
python_requires = >=3.11
install_requires =
    numpy==2.0.0
    scipy==1.13.1
    dipy>=1.9.0
    matplotlib>=3.9
    groupyr>=0.3.4
    pandas==2.2.3
    requests
    seaborn==0.13.0
    scikit-learn==1.5.2
    sklearn_pandas>=2.0.0
    tqdm
    statsmodels>=0.14.4

zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
tables =
    tables==3.10.2
torch =
    torch
    torchvision
tf =
    tensorflow>=2.18.0
dev =
    matplotlib
    numpydoc
    pre-commit
    pydocstyle
    pytest-cov
    pytest-xdist[psutil]
    pytest
    s3fs
    sphinx
    sphinx-gallery
    sphinx-panels
    pydata-sphinx-theme==0.15.4

maint =
    rapidfuzz

all =
    %(tables)s
    %(torch)s
    %(tf)s
    %(dev)s
    %(maint)s

[pydocstyle]
convention = numpy
match-dir = afqinsight

[codespell]
skip = afqinsight/data/*
count =
quiet-level = 3